tests/prsl/fixtures/valid/lifecycle-superseded.prsl
begin-record
record v1 {
  content : "old version";
  lifecycle-metadata {
    state : superseded;
    revision : 1;
    superseded-by : v2;
  };
}
end-record
---
begin-record
record v2 {
  content : "new version";
  lifecycle-metadata {
    state : revised;
    revision : 2;
  };
}
end-record
---
