tests/prsl/fixtures/invalid/unclosed-string.prsl
begin-record
record unclosed {
  content : "missing end marker;
}
end-record
---
